refactor: optimize KYC completion threading and simplify user update logic
Signed-off-by: kabi175 <kabilan.mee@gmail.com>